Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI708.H

typedef void VOID;
typedef int INT;
typedef unsigned short * LPUSHORT;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int MSGNDX;
BTI708API VOID __stdcall BTI708_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTI708API BASEADDR __stdcall BTI708_MsgTableCreate(INT count,HCORE handleval);
BTI708API MSGADDR __stdcall BTI708_MsgTableRd(MSGNDX msgindex,INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgTableReset(INT channum,HCORE handleval);
BTI708API VOID __stdcall BTI708_MsgTableWipe(BASEADDR baseaddr,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_MsgTableWr(MSGADDR msgaddr,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_ParamAmplitudeGet(LPUSHORT dacval,INT channum,HCORE handleval);
BTI708API ERRVAL __stdcall BTI708_TestProtocol(HCORE handleval);