Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.VB

        Public Declare Sub BTI708_MsgReset Lib "BTI708.DLL" Alias "_BTI708_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_MsgTableCreate Lib "BTI708.DLL" Alias "_BTI708_MsgTableCreate@8" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI708_MsgTableRd Lib "BTI708.DLL" Alias "_BTI708_MsgTableRd@12" (ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI708_MsgTableReset Lib "BTI708.DLL" Alias "_BTI708_MsgTableReset@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI708_MsgTableWipe Lib "BTI708.DLL" Alias "_BTI708_MsgTableWipe@8" (ByVal basevaladdr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_MsgTableWr Lib "BTI708.DLL" Alias "_BTI708_MsgTableWr@12" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ParamAmplitudeGet Lib "BTI708.DLL" Alias "_BTI708_ParamAmplitudeGet@12" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_TestProtocol Lib "BTI708.DLL" Alias "_BTI708_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
    End Class
